--- a/backend_api/templates/base.html
+++ b/backend_api/templates/base.html
@@ -455,6 +455,7 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="{% static 'components/utils.js' %}"></script>
     
     {% block react_components %}{% endblock %}
 </body>
