--- a/backend_api/static/components/style.css
+++ b/backend_api/static/components/style.css
@@ -483,4 +483,19 @@ body {
     .logo {
         height: 50px;
     }
+    .favorite-star {
+    cursor: pointer;
+    font-size: 1.5rem;
+    background: none;
+    border: none;
+    transition: color 0.2s;
+    }
+
+    .favorite-star.filled {
+     color: gold;
+    }
+
+    .favorite-star.empty {
+    color: gray;
+    }
 }
