--- a/backend_api/static/components/style.css
+++ b/backend_api/static/components/style.css
@@ -6,9 +6,10 @@
     --text-color: #333333;
     --bg-color: #789BD6;
     --card-bg: #ffffff;
+    --card-bg-vieved: #cbd8ef;
     --border-color: #e0e0e0;
     --article-bg: #ffffff;
-    --status-viewed: #e6f7ee;
+    --status-viewed: #cbd8ef;
     --status-not-viewed: #fff7e6;
     --shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
@@ -21,6 +22,7 @@
     --text-color: #e0e0e0;
     --bg-color: #121212;
     --card-bg: #1e1e2e;
+    --card-bg-vieved: #14141f;
     --border-color: #333344;
     --article-bg: #252538;
     --status-viewed: #2d4d3d;
@@ -232,7 +234,7 @@ body {
 }
 
 .internship-card-viewed {
-    background-color: #cbd8ef;
+    background-color: var(--card-bg-vieved);
     border-radius: 0.8rem;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
@@ -294,7 +296,7 @@ body {
 }
 
 .status-viewed {
-    background-color:#cbd8ef;
+    background-color:var(--status-viewed);
     color: #00a854;
 }
 
